# wishlist-inviter

./: .gitignore  Present Roulette.postman_collection.json  Present-Roulette.postman_collection.json  README.md  Wishlist-Inviter.postman_collection.json  docker-compose-dev.yml  docker-compose.yml  go-service.Dockerfile  go-service.dev.Dockerfile  go.work.sum
amazon-adapter/: Dockerfile  Readme.md  pyproject.toml
amazon-adapter/amazon_adapter/: authHandler.py  jsonHTTPException.py  main.py  settings.py
amazon-adapter/amazon_adapter/models/: item.py  wishlist.py
amazon-adapter/amazon_adapter/scrapper/: scrapper.py
amazon-clone/: .gitignore
amazon-scrapper/: Dockerfile  Readme.md  pyproject.toml
cluster/: docker-compose.yml
database/: Dockerfile
database-adapter/: .gitignore  Dockerfile  Readme.md  go.mod  go.sum  main.go  run.sh
docs/: README.md  amazon-adapter.html  amazon-adapter.md  architecture.drawio  database-adapter.html  database-adapter.md  genHtml.sh  gmail-adapter.apib  gmail-adapter.html  gmail-adapter.md  index.md  mail-service.apib  mail-service.html  mail-service.md  scrapper-facade.apib  scrapper-facade.html  scrapper-facade.md  user-endpoint.html  user-endpoint.md  user-service.html  user-service.md  wishlist-service.md
frontend/: Dockerfile-dev  package-lock.json  package.json  vite.config.js
gmail-adapter/: .gitignore  Readme.md  go.mod  go.sum  main.go
gmail-service/: Dockerfile  Readme.md  go.mod  main.go
mail-adapter/: .gitignore  Dockerfile  Readme.md  docker-compose.yml  go.mod  main.go
mail-service/: Readme.md  go.mod  (+2 more)
(+117 files in other folders)
